PROJECT(VMTKSCRIPT_RESOURCES)

SET(VMTKSCRIPT_RESOURCES_SRCS
  vmtkimagevolumeviewerpresets.xml
  )

IF(NOT VMTKSCRIPT_RESOURCES_INSTALL_BIN_DIR)
  SET(VMTKSCRIPT_RESOURCES_INSTALL_BIN_DIR bin)
ENDIF(NOT VMTKSCRIPT_RESOURCES_INSTALL_BIN_DIR)

IF(NOT VMTKSCRIPT_RESOURCES_INSTALL_LIB_DIR)
  SET(VMTKSCRIPT_RESOURCES_INSTALL_LIB_DIR lib/${VMTK_PYTHON_VERSION}/site-packages/vmtk)
ENDIF(NOT VMTKSCRIPT_RESOURCES_INSTALL_LIB_DIR)

FOREACH (SCRIPT_FILE  ${VMTKSCRIPT_RESOURCES_SRCS})
  CONFIGURE_FILE(${VMTKSCRIPT_RESOURCES_SOURCE_DIR}/${SCRIPT_FILE} ${VMTKSCRIPT_RESOURCES_BINARY_DIR}/${SCRIPT_FILE} COPYONLY)
ENDFOREACH (SCRIPT_FILE)

install(FILES ${VMTKSCRIPT_RESOURCES_SRCS}
  DESTINATION ${VMTKSCRIPT_RESOURCES_INSTALL_LIB_DIR}
  COMPONENT PythonRuntimeLibraries)

IF (NOT VMTK_MINIMAL_INSTALL)

INSTALL(PROGRAMS ${VMTKSCRIPT_RESOURCES_SRCS}
  DESTINATION ${VMTKSCRIPT_RESOURCES_INSTALL_BIN_DIR}
  COMPONENT RuntimeExecutables)

ENDIF (NOT VMTK_MINIMAL_INSTALL)